# pipe

./: CMakeLists.txt
src/: pipe.c  pipe.cpp  pipe.h  pipe_repr.h
tests/: child.cpp  parent.cpp  pipe_test.cpp
